feat: implement routes and pages

--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -10,6 +10,9 @@ dependencies:
   flutter:
     sdk: flutter
 
+  #Page Transitions
+  page_transition: ^2.1.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
