feat: implement loadJsonFile

--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -13,6 +13,10 @@ dependencies:
   #Page Transitions
   page_transition: ^2.1.0
 
+  #File picke for json import
+  file_picker: ^9.0.2
+  permission_handler: ^11.4.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
